fix: completar metodos pendientes y agregar validaciones, conteo de ejemplares y control de sesion en controladores de biblioteca